tests/expectations/compiler/storage/external_storage.out
program child.aleo;

struct Point:
    x as field;
    y as field;

struct Stats:
    values as [u32; 3u32];
    active as boolean;

mapping flag__:
    key as boolean.public;
    value as boolean.public;

mapping scalar_val__:
    key as boolean.public;
    value as scalar.public;

mapping field_val__:
    key as boolean.public;
    value as field.public;

mapping group_val__:
    key as boolean.public;
    value as group.public;

mapping point__:
    key as boolean.public;
    value as Point.public;

mapping points__:
    key as boolean.public;
    value as [Point; 2u32].public;

mapping stats__:
    key as boolean.public;
    value as Stats.public;

mapping arr_u32__:
    key as boolean.public;
    value as [u32; 3u32].public;

mapping arr_bool__:
    key as boolean.public;
    value as [boolean; 2u32].public;

mapping nested__:
    key as boolean.public;
    value as [[u8; 2u32]; 2u32].public;

mapping counter__:
    key as boolean.public;
    value as u8.public;

mapping vec__:
    key as u32.public;
    value as u8.public;

mapping vec__len__:
    key as boolean.public;
    value as u32.public;

function initialize:
    async initialize into r0;
    output r0 as child.aleo/initialize.future;

finalize initialize:
    set true into flag__[false];
    set 1scalar into scalar_val__[false];
    set 42field into field_val__[false];
    set 0group into group_val__[false];
    cast 1field 2field into r0 as Point;
    set r0 into point__[false];
    cast 10field 20field into r1 as Point;
    cast 30field 40field into r2 as Point;
    cast r1 r2 into r3 as [Point; 2u32];
    set r3 into points__[false];
    cast 5u32 10u32 15u32 into r4 as [u32; 3u32];
    cast r4 true into r5 as Stats;
    set r5 into stats__[false];
    cast 7u32 8u32 9u32 into r6 as [u32; 3u32];
    set r6 into arr_u32__[false];
    cast true false into r7 as [boolean; 2u32];
    set r7 into arr_bool__[false];
    cast 1u8 2u8 into r8 as [u8; 2u32];
    cast 3u8 4u8 into r9 as [u8; 2u32];
    cast r8 r9 into r10 as [[u8; 2u32]; 2u32];
    set r10 into nested__[false];
    set 9u8 into counter__[false];
    get.or_use vec__len__[false] 0u32 into r11;
    add r11 1u32 into r12;
    set r12 into vec__len__[false];
    set 50u8 into vec__[r11];

function wipe:
    async wipe into r0;
    output r0 as child.aleo/wipe.future;

finalize wipe:
    remove flag__[false];
    remove scalar_val__[false];
    remove field_val__[false];
    remove group_val__[false];
    remove point__[false];
    remove points__[false];
    remove stats__[false];
    remove arr_u32__[false];
    remove arr_bool__[false];
    remove nested__[false];
    remove counter__[false];
    set 0u32 into vec__len__[false];

constructor:
    assert.eq edition 0u16;
// --- Next Program --- //
import child.aleo;
program test.aleo;

struct Optional__DbbQYuLaHdi:
    is_some as boolean;
    val as boolean;

struct Optional__JYP65FYVVJA:
    is_some as boolean;
    val as scalar;

struct Optional__K4XRQPOk9yX:
    is_some as boolean;
    val as field;

struct Optional__8aTicnNTOvk:
    is_some as boolean;
    val as group;

struct Optional__6Uxqmb23WYh:
    is_some as boolean;
    val as child.aleo/Point;

struct Optional__BvQiU368h5e:
    is_some as boolean;
    val as [child.aleo/Point; 2u32];

struct Optional__L4AaGzlaCt7:
    is_some as boolean;
    val as child.aleo/Stats;

struct Optional__EJpsIdnRUro:
    is_some as boolean;
    val as [u32; 3u32];

struct Optional__H28y6OQZ8v9:
    is_some as boolean;
    val as [boolean; 2u32];

struct Optional__3Jw8FxjrqtE:
    is_some as boolean;
    val as [[u8; 2u32]; 2u32];

struct Optional__8hhrPm4c3KB:
    is_some as boolean;
    val as u8;

function check_initialized:
    async check_initialized into r0;
    output r0 as test.aleo/check_initialized.future;

finalize check_initialized:
    contains child.aleo/flag__[false] into r0;
    get.or_use child.aleo/flag__[false] false into r1;
    cast true r1 into r2 as Optional__DbbQYuLaHdi;
    cast false false into r3 as Optional__DbbQYuLaHdi;
    ternary r0 r2.is_some r3.is_some into r4;
    ternary r0 r2.val r3.val into r5;
    cast r4 r5 into r6 as Optional__DbbQYuLaHdi;
    assert.eq r6.is_some true;
    contains child.aleo/flag__[false] into r7;
    get.or_use child.aleo/flag__[false] false into r8;
    cast true r8 into r9 as Optional__DbbQYuLaHdi;
    cast false false into r10 as Optional__DbbQYuLaHdi;
    ternary r7 r9.is_some r10.is_some into r11;
    ternary r7 r9.val r10.val into r12;
    cast r11 r12 into r13 as Optional__DbbQYuLaHdi;
    is.eq r13.val true into r14;
    assert.eq r14 true;
    contains child.aleo/scalar_val__[false] into r15;
    get.or_use child.aleo/scalar_val__[false] 0scalar into r16;
    cast true r16 into r17 as Optional__JYP65FYVVJA;
    cast false 0scalar into r18 as Optional__JYP65FYVVJA;
    ternary r15 r17.is_some r18.is_some into r19;
    ternary r15 r17.val r18.val into r20;
    cast r19 r20 into r21 as Optional__JYP65FYVVJA;
    assert.eq r21.is_some true;
    contains child.aleo/scalar_val__[false] into r22;
    get.or_use child.aleo/scalar_val__[false] 0scalar into r23;
    cast true r23 into r24 as Optional__JYP65FYVVJA;
    cast false 0scalar into r25 as Optional__JYP65FYVVJA;
    ternary r22 r24.is_some r25.is_some into r26;
    ternary r22 r24.val r25.val into r27;
    cast r26 r27 into r28 as Optional__JYP65FYVVJA;
    is.eq r28.val 1scalar into r29;
    assert.eq r29 true;
    contains child.aleo/field_val__[false] into r30;
    get.or_use child.aleo/field_val__[false] 0field into r31;
    cast true r31 into r32 as Optional__K4XRQPOk9yX;
    cast false 0field into r33 as Optional__K4XRQPOk9yX;
    ternary r30 r32.is_some r33.is_some into r34;
    ternary r30 r32.val r33.val into r35;
    cast r34 r35 into r36 as Optional__K4XRQPOk9yX;
    assert.eq r36.is_some true;
    contains child.aleo/field_val__[false] into r37;
    get.or_use child.aleo/field_val__[false] 0field into r38;
    cast true r38 into r39 as Optional__K4XRQPOk9yX;
    cast false 0field into r40 as Optional__K4XRQPOk9yX;
    ternary r37 r39.is_some r40.is_some into r41;
    ternary r37 r39.val r40.val into r42;
    cast r41 r42 into r43 as Optional__K4XRQPOk9yX;
    is.eq r43.val 42field into r44;
    assert.eq r44 true;
    contains child.aleo/group_val__[false] into r45;
    get.or_use child.aleo/group_val__[false] 0group into r46;
    cast true r46 into r47 as Optional__8aTicnNTOvk;
    cast false 0group into r48 as Optional__8aTicnNTOvk;
    ternary r45 r47.is_some r48.is_some into r49;
    ternary r45 r47.val r48.val into r50;
    cast r49 r50 into r51 as Optional__8aTicnNTOvk;
    assert.eq r51.is_some true;
    contains child.aleo/group_val__[false] into r52;
    get.or_use child.aleo/group_val__[false] 0group into r53;
    cast true r53 into r54 as Optional__8aTicnNTOvk;
    cast false 0group into r55 as Optional__8aTicnNTOvk;
    ternary r52 r54.is_some r55.is_some into r56;
    ternary r52 r54.val r55.val into r57;
    cast r56 r57 into r58 as Optional__8aTicnNTOvk;
    is.eq r58.val 0group into r59;
    assert.eq r59 true;
    contains child.aleo/point__[false] into r60;
    cast 0field 0field into r61 as child.aleo/Point;
    get.or_use child.aleo/point__[false] r61 into r62;
    cast true r62 into r63 as Optional__6Uxqmb23WYh;
    cast 0field 0field into r64 as child.aleo/Point;
    cast false r64 into r65 as Optional__6Uxqmb23WYh;
    ternary r60 r63.val.x r65.val.x into r66;
    ternary r60 r63.val.y r65.val.y into r67;
    cast r66 r67 into r68 as child.aleo/Point;
    ternary r60 r63.is_some r65.is_some into r69;
    cast r69 r68 into r70 as Optional__6Uxqmb23WYh;
    assert.eq r70.is_some true;
    contains child.aleo/point__[false] into r71;
    cast 0field 0field into r72 as child.aleo/Point;
    get.or_use child.aleo/point__[false] r72 into r73;
    cast true r73 into r74 as Optional__6Uxqmb23WYh;
    cast 0field 0field into r75 as child.aleo/Point;
    cast false r75 into r76 as Optional__6Uxqmb23WYh;
    ternary r71 r74.val.x r76.val.x into r77;
    ternary r71 r74.val.y r76.val.y into r78;
    cast r77 r78 into r79 as child.aleo/Point;
    ternary r71 r74.is_some r76.is_some into r80;
    cast r80 r79 into r81 as Optional__6Uxqmb23WYh;
    is.eq r81.val.x 1field into r82;
    assert.eq r82 true;
    is.eq r81.val.y 2field into r83;
    assert.eq r83 true;
    contains child.aleo/points__[false] into r84;
    cast 0field 0field into r85 as child.aleo/Point;
    cast r85 r85 into r86 as [child.aleo/Point; 2u32];
    get.or_use child.aleo/points__[false] r86 into r87;
    cast true r87 into r88 as Optional__BvQiU368h5e;
    cast 0field 0field into r89 as child.aleo/Point;
    cast r89 r89 into r90 as [child.aleo/Point; 2u32];
    cast false r90 into r91 as Optional__BvQiU368h5e;
    ternary r84 r88.val[0u32].x r91.val[0u32].x into r92;
    ternary r84 r88.val[0u32].y r91.val[0u32].y into r93;
    cast r92 r93 into r94 as child.aleo/Point;
    ternary r84 r88.val[1u32].x r91.val[1u32].x into r95;
    ternary r84 r88.val[1u32].y r91.val[1u32].y into r96;
    cast r95 r96 into r97 as child.aleo/Point;
    cast r94 r97 into r98 as [child.aleo/Point; 2u32];
    ternary r84 r88.is_some r91.is_some into r99;
    cast r99 r98 into r100 as Optional__BvQiU368h5e;
    assert.eq r100.is_some true;
    contains child.aleo/points__[false] into r101;
    cast 0field 0field into r102 as child.aleo/Point;
    cast r102 r102 into r103 as [child.aleo/Point; 2u32];
    get.or_use child.aleo/points__[false] r103 into r104;
    cast true r104 into r105 as Optional__BvQiU368h5e;
    cast 0field 0field into r106 as child.aleo/Point;
    cast r106 r106 into r107 as [child.aleo/Point; 2u32];
    cast false r107 into r108 as Optional__BvQiU368h5e;
    ternary r101 r105.val[0u32].x r108.val[0u32].x into r109;
    ternary r101 r105.val[0u32].y r108.val[0u32].y into r110;
    cast r109 r110 into r111 as child.aleo/Point;
    ternary r101 r105.val[1u32].x r108.val[1u32].x into r112;
    ternary r101 r105.val[1u32].y r108.val[1u32].y into r113;
    cast r112 r113 into r114 as child.aleo/Point;
    cast r111 r114 into r115 as [child.aleo/Point; 2u32];
    ternary r101 r105.is_some r108.is_some into r116;
    cast r116 r115 into r117 as Optional__BvQiU368h5e;
    is.eq r117.val[0u32].x 10field into r118;
    assert.eq r118 true;
    is.eq r117.val[1u32].y 40field into r119;
    assert.eq r119 true;
    contains child.aleo/stats__[false] into r120;
    cast 0u32 0u32 0u32 into r121 as [u32; 3u32];
    cast r121 false into r122 as child.aleo/Stats;
    get.or_use child.aleo/stats__[false] r122 into r123;
    cast true r123 into r124 as Optional__L4AaGzlaCt7;
    cast r121 false into r125 as child.aleo/Stats;
    cast false r125 into r126 as Optional__L4AaGzlaCt7;
    ternary r120 r124.val.values[0u32] r126.val.values[0u32] into r127;
    ternary r120 r124.val.values[1u32] r126.val.values[1u32] into r128;
    ternary r120 r124.val.values[2u32] r126.val.values[2u32] into r129;
    cast r127 r128 r129 into r130 as [u32; 3u32];
    ternary r120 r124.val.active r126.val.active into r131;
    cast r130 r131 into r132 as child.aleo/Stats;
    ternary r120 r124.is_some r126.is_some into r133;
    cast r133 r132 into r134 as Optional__L4AaGzlaCt7;
    assert.eq r134.is_some true;
    contains child.aleo/stats__[false] into r135;
    cast r121 false into r136 as child.aleo/Stats;
    get.or_use child.aleo/stats__[false] r136 into r137;
    cast true r137 into r138 as Optional__L4AaGzlaCt7;
    cast r121 false into r139 as child.aleo/Stats;
    cast false r139 into r140 as Optional__L4AaGzlaCt7;
    ternary r135 r138.val.values[0u32] r140.val.values[0u32] into r141;
    ternary r135 r138.val.values[1u32] r140.val.values[1u32] into r142;
    ternary r135 r138.val.values[2u32] r140.val.values[2u32] into r143;
    cast r141 r142 r143 into r144 as [u32; 3u32];
    ternary r135 r138.val.active r140.val.active into r145;
    cast r144 r145 into r146 as child.aleo/Stats;
    ternary r135 r138.is_some r140.is_some into r147;
    cast r147 r146 into r148 as Optional__L4AaGzlaCt7;
    is.eq r148.val.values[1u32] 10u32 into r149;
    assert.eq r149 true;
    is.eq r148.val.active true into r150;
    assert.eq r150 true;
    contains child.aleo/arr_u32__[false] into r151;
    get.or_use child.aleo/arr_u32__[false] r121 into r152;
    cast true r152 into r153 as Optional__EJpsIdnRUro;
    cast false r121 into r154 as Optional__EJpsIdnRUro;
    ternary r151 r153.val[0u32] r154.val[0u32] into r155;
    ternary r151 r153.val[1u32] r154.val[1u32] into r156;
    ternary r151 r153.val[2u32] r154.val[2u32] into r157;
    cast r155 r156 r157 into r158 as [u32; 3u32];
    ternary r151 r153.is_some r154.is_some into r159;
    cast r159 r158 into r160 as Optional__EJpsIdnRUro;
    assert.eq r160.is_some true;
    contains child.aleo/arr_u32__[false] into r161;
    get.or_use child.aleo/arr_u32__[false] r121 into r162;
    cast true r162 into r163 as Optional__EJpsIdnRUro;
    cast false r121 into r164 as Optional__EJpsIdnRUro;
    ternary r161 r163.val[0u32] r164.val[0u32] into r165;
    ternary r161 r163.val[1u32] r164.val[1u32] into r166;
    ternary r161 r163.val[2u32] r164.val[2u32] into r167;
    cast r165 r166 r167 into r168 as [u32; 3u32];
    ternary r161 r163.is_some r164.is_some into r169;
    cast r169 r168 into r170 as Optional__EJpsIdnRUro;
    is.eq r170.val[2u32] 9u32 into r171;
    assert.eq r171 true;
    contains child.aleo/arr_bool__[false] into r172;
    cast false false into r173 as [boolean; 2u32];
    get.or_use child.aleo/arr_bool__[false] r173 into r174;
    cast true r174 into r175 as Optional__H28y6OQZ8v9;
    cast false r173 into r176 as Optional__H28y6OQZ8v9;
    ternary r172 r175.val[0u32] r176.val[0u32] into r177;
    ternary r172 r175.val[1u32] r176.val[1u32] into r178;
    cast r177 r178 into r179 as [boolean; 2u32];
    ternary r172 r175.is_some r176.is_some into r180;
    cast r180 r179 into r181 as Optional__H28y6OQZ8v9;
    assert.eq r181.is_some true;
    contains child.aleo/arr_bool__[false] into r182;
    get.or_use child.aleo/arr_bool__[false] r173 into r183;
    cast true r183 into r184 as Optional__H28y6OQZ8v9;
    cast false r173 into r185 as Optional__H28y6OQZ8v9;
    ternary r182 r184.val[0u32] r185.val[0u32] into r186;
    ternary r182 r184.val[1u32] r185.val[1u32] into r187;
    cast r186 r187 into r188 as [boolean; 2u32];
    ternary r182 r184.is_some r185.is_some into r189;
    cast r189 r188 into r190 as Optional__H28y6OQZ8v9;
    is.eq r190.val[0u32] true into r191;
    assert.eq r191 true;
    contains child.aleo/nested__[false] into r192;
    cast 0u8 0u8 into r193 as [u8; 2u32];
    cast r193 r193 into r194 as [[u8; 2u32]; 2u32];
    get.or_use child.aleo/nested__[false] r194 into r195;
    cast true r195 into r196 as Optional__3Jw8FxjrqtE;
    cast false r194 into r197 as Optional__3Jw8FxjrqtE;
    ternary r192 r196.val[0u32][0u32] r197.val[0u32][0u32] into r198;
    ternary r192 r196.val[0u32][1u32] r197.val[0u32][1u32] into r199;
    cast r198 r199 into r200 as [u8; 2u32];
    ternary r192 r196.val[1u32][0u32] r197.val[1u32][0u32] into r201;
    ternary r192 r196.val[1u32][1u32] r197.val[1u32][1u32] into r202;
    cast r201 r202 into r203 as [u8; 2u32];
    cast r200 r203 into r204 as [[u8; 2u32]; 2u32];
    ternary r192 r196.is_some r197.is_some into r205;
    cast r205 r204 into r206 as Optional__3Jw8FxjrqtE;
    assert.eq r206.is_some true;
    contains child.aleo/nested__[false] into r207;
    get.or_use child.aleo/nested__[false] r194 into r208;
    cast true r208 into r209 as Optional__3Jw8FxjrqtE;
    cast false r194 into r210 as Optional__3Jw8FxjrqtE;
    ternary r207 r209.val[0u32][0u32] r210.val[0u32][0u32] into r211;
    ternary r207 r209.val[0u32][1u32] r210.val[0u32][1u32] into r212;
    cast r211 r212 into r213 as [u8; 2u32];
    ternary r207 r209.val[1u32][0u32] r210.val[1u32][0u32] into r214;
    ternary r207 r209.val[1u32][1u32] r210.val[1u32][1u32] into r215;
    cast r214 r215 into r216 as [u8; 2u32];
    cast r213 r216 into r217 as [[u8; 2u32]; 2u32];
    ternary r207 r209.is_some r210.is_some into r218;
    cast r218 r217 into r219 as Optional__3Jw8FxjrqtE;
    is.eq r219.val[1u32][1u32] 4u8 into r220;
    assert.eq r220 true;
    contains child.aleo/counter__[false] into r221;
    get.or_use child.aleo/counter__[false] 0u8 into r222;
    cast true r222 into r223 as Optional__8hhrPm4c3KB;
    cast false 0u8 into r224 as Optional__8hhrPm4c3KB;
    ternary r221 r223.is_some r224.is_some into r225;
    ternary r221 r223.val r224.val into r226;
    cast r225 r226 into r227 as Optional__8hhrPm4c3KB;
    assert.eq r227.is_some true;
    contains child.aleo/counter__[false] into r228;
    get.or_use child.aleo/counter__[false] 0u8 into r229;
    cast true r229 into r230 as Optional__8hhrPm4c3KB;
    cast false 0u8 into r231 as Optional__8hhrPm4c3KB;
    ternary r228 r230.is_some r231.is_some into r232;
    ternary r228 r230.val r231.val into r233;
    cast r232 r233 into r234 as Optional__8hhrPm4c3KB;
    is.eq r234.val 9u8 into r235;
    assert.eq r235 true;
    get.or_use child.aleo/vec__len__[false] 0u32 into r236;
    lt 2u32 r236 into r237;
    get.or_use child.aleo/vec__[2u32] 0u8 into r238;
    cast true r238 into r239 as Optional__8hhrPm4c3KB;
    cast false 0u8 into r240 as Optional__8hhrPm4c3KB;
    ternary r237 r239.is_some r240.is_some into r241;
    ternary r237 r239.val r240.val into r242;
    cast r241 r242 into r243 as Optional__8hhrPm4c3KB;
    assert.eq r243.is_some true;
    is.eq r243.val 70u8 into r244;
    assert.eq r244 true;

function check_wiped:
    async check_wiped into r0;
    output r0 as test.aleo/check_wiped.future;

finalize check_wiped:
    contains child.aleo/flag__[false] into r0;
    get.or_use child.aleo/flag__[false] false into r1;
    cast true r1 into r2 as Optional__DbbQYuLaHdi;
    cast false false into r3 as Optional__DbbQYuLaHdi;
    ternary r0 r2.is_some r3.is_some into r4;
    ternary r0 r2.val r3.val into r5;
    cast r4 r5 into r6 as Optional__DbbQYuLaHdi;
    cast false false into r7 as Optional__DbbQYuLaHdi;
    is.eq r6 r7 into r8;
    assert.eq r8 true;
    contains child.aleo/scalar_val__[false] into r9;
    get.or_use child.aleo/scalar_val__[false] 0scalar into r10;
    cast true r10 into r11 as Optional__JYP65FYVVJA;
    cast false 0scalar into r12 as Optional__JYP65FYVVJA;
    ternary r9 r11.is_some r12.is_some into r13;
    ternary r9 r11.val r12.val into r14;
    cast r13 r14 into r15 as Optional__JYP65FYVVJA;
    cast false 0scalar into r16 as Optional__JYP65FYVVJA;
    is.eq r15 r16 into r17;
    assert.eq r17 true;
    contains child.aleo/field_val__[false] into r18;
    get.or_use child.aleo/field_val__[false] 0field into r19;
    cast true r19 into r20 as Optional__K4XRQPOk9yX;
    cast false 0field into r21 as Optional__K4XRQPOk9yX;
    ternary r18 r20.is_some r21.is_some into r22;
    ternary r18 r20.val r21.val into r23;
    cast r22 r23 into r24 as Optional__K4XRQPOk9yX;
    cast false 0field into r25 as Optional__K4XRQPOk9yX;
    is.eq r24 r25 into r26;
    assert.eq r26 true;
    contains child.aleo/group_val__[false] into r27;
    get.or_use child.aleo/group_val__[false] 0group into r28;
    cast true r28 into r29 as Optional__8aTicnNTOvk;
    cast false 0group into r30 as Optional__8aTicnNTOvk;
    ternary r27 r29.is_some r30.is_some into r31;
    ternary r27 r29.val r30.val into r32;
    cast r31 r32 into r33 as Optional__8aTicnNTOvk;
    cast false 0group into r34 as Optional__8aTicnNTOvk;
    is.eq r33 r34 into r35;
    assert.eq r35 true;
    contains child.aleo/point__[false] into r36;
    cast 0field 0field into r37 as child.aleo/Point;
    get.or_use child.aleo/point__[false] r37 into r38;
    cast true r38 into r39 as Optional__6Uxqmb23WYh;
    cast 0field 0field into r40 as child.aleo/Point;
    cast false r40 into r41 as Optional__6Uxqmb23WYh;
    ternary r36 r39.val.x r41.val.x into r42;
    ternary r36 r39.val.y r41.val.y into r43;
    cast r42 r43 into r44 as child.aleo/Point;
    ternary r36 r39.is_some r41.is_some into r45;
    cast r45 r44 into r46 as Optional__6Uxqmb23WYh;
    cast 0field 0field into r47 as child.aleo/Point;
    cast false r47 into r48 as Optional__6Uxqmb23WYh;
    is.eq r46 r48 into r49;
    assert.eq r49 true;
    contains child.aleo/points__[false] into r50;
    cast 0field 0field into r51 as child.aleo/Point;
    cast r51 r51 into r52 as [child.aleo/Point; 2u32];
    get.or_use child.aleo/points__[false] r52 into r53;
    cast true r53 into r54 as Optional__BvQiU368h5e;
    cast 0field 0field into r55 as child.aleo/Point;
    cast r55 r55 into r56 as [child.aleo/Point; 2u32];
    cast false r56 into r57 as Optional__BvQiU368h5e;
    ternary r50 r54.val[0u32].x r57.val[0u32].x into r58;
    ternary r50 r54.val[0u32].y r57.val[0u32].y into r59;
    cast r58 r59 into r60 as child.aleo/Point;
    ternary r50 r54.val[1u32].x r57.val[1u32].x into r61;
    ternary r50 r54.val[1u32].y r57.val[1u32].y into r62;
    cast r61 r62 into r63 as child.aleo/Point;
    cast r60 r63 into r64 as [child.aleo/Point; 2u32];
    ternary r50 r54.is_some r57.is_some into r65;
    cast r65 r64 into r66 as Optional__BvQiU368h5e;
    cast 0field 0field into r67 as child.aleo/Point;
    cast r67 r67 into r68 as [child.aleo/Point; 2u32];
    cast false r68 into r69 as Optional__BvQiU368h5e;
    is.eq r66 r69 into r70;
    assert.eq r70 true;
    contains child.aleo/stats__[false] into r71;
    cast 0u32 0u32 0u32 into r72 as [u32; 3u32];
    cast r72 false into r73 as child.aleo/Stats;
    get.or_use child.aleo/stats__[false] r73 into r74;
    cast true r74 into r75 as Optional__L4AaGzlaCt7;
    cast r72 false into r76 as child.aleo/Stats;
    cast false r76 into r77 as Optional__L4AaGzlaCt7;
    ternary r71 r75.val.values[0u32] r77.val.values[0u32] into r78;
    ternary r71 r75.val.values[1u32] r77.val.values[1u32] into r79;
    ternary r71 r75.val.values[2u32] r77.val.values[2u32] into r80;
    cast r78 r79 r80 into r81 as [u32; 3u32];
    ternary r71 r75.val.active r77.val.active into r82;
    cast r81 r82 into r83 as child.aleo/Stats;
    ternary r71 r75.is_some r77.is_some into r84;
    cast r84 r83 into r85 as Optional__L4AaGzlaCt7;
    cast r72 false into r86 as child.aleo/Stats;
    cast false r86 into r87 as Optional__L4AaGzlaCt7;
    is.eq r85 r87 into r88;
    assert.eq r88 true;
    contains child.aleo/arr_u32__[false] into r89;
    get.or_use child.aleo/arr_u32__[false] r72 into r90;
    cast true r90 into r91 as Optional__EJpsIdnRUro;
    cast false r72 into r92 as Optional__EJpsIdnRUro;
    ternary r89 r91.val[0u32] r92.val[0u32] into r93;
    ternary r89 r91.val[1u32] r92.val[1u32] into r94;
    ternary r89 r91.val[2u32] r92.val[2u32] into r95;
    cast r93 r94 r95 into r96 as [u32; 3u32];
    ternary r89 r91.is_some r92.is_some into r97;
    cast r97 r96 into r98 as Optional__EJpsIdnRUro;
    cast false r72 into r99 as Optional__EJpsIdnRUro;
    is.eq r98 r99 into r100;
    assert.eq r100 true;
    contains child.aleo/arr_bool__[false] into r101;
    cast false false into r102 as [boolean; 2u32];
    get.or_use child.aleo/arr_bool__[false] r102 into r103;
    cast true r103 into r104 as Optional__H28y6OQZ8v9;
    cast false r102 into r105 as Optional__H28y6OQZ8v9;
    ternary r101 r104.val[0u32] r105.val[0u32] into r106;
    ternary r101 r104.val[1u32] r105.val[1u32] into r107;
    cast r106 r107 into r108 as [boolean; 2u32];
    ternary r101 r104.is_some r105.is_some into r109;
    cast r109 r108 into r110 as Optional__H28y6OQZ8v9;
    cast false r102 into r111 as Optional__H28y6OQZ8v9;
    is.eq r110 r111 into r112;
    assert.eq r112 true;
    contains child.aleo/nested__[false] into r113;
    cast 0u8 0u8 into r114 as [u8; 2u32];
    cast r114 r114 into r115 as [[u8; 2u32]; 2u32];
    get.or_use child.aleo/nested__[false] r115 into r116;
    cast true r116 into r117 as Optional__3Jw8FxjrqtE;
    cast false r115 into r118 as Optional__3Jw8FxjrqtE;
    ternary r113 r117.val[0u32][0u32] r118.val[0u32][0u32] into r119;
    ternary r113 r117.val[0u32][1u32] r118.val[0u32][1u32] into r120;
    cast r119 r120 into r121 as [u8; 2u32];
    ternary r113 r117.val[1u32][0u32] r118.val[1u32][0u32] into r122;
    ternary r113 r117.val[1u32][1u32] r118.val[1u32][1u32] into r123;
    cast r122 r123 into r124 as [u8; 2u32];
    cast r121 r124 into r125 as [[u8; 2u32]; 2u32];
    ternary r113 r117.is_some r118.is_some into r126;
    cast r126 r125 into r127 as Optional__3Jw8FxjrqtE;
    cast false r115 into r128 as Optional__3Jw8FxjrqtE;
    is.eq r127 r128 into r129;
    assert.eq r129 true;
    contains child.aleo/counter__[false] into r130;
    get.or_use child.aleo/counter__[false] 0u8 into r131;
    cast true r131 into r132 as Optional__8hhrPm4c3KB;
    cast false 0u8 into r133 as Optional__8hhrPm4c3KB;
    ternary r130 r132.is_some r133.is_some into r134;
    ternary r130 r132.val r133.val into r135;
    cast r134 r135 into r136 as Optional__8hhrPm4c3KB;
    cast false 0u8 into r137 as Optional__8hhrPm4c3KB;
    is.eq r136 r137 into r138;
    assert.eq r138 true;
    get.or_use child.aleo/vec__len__[false] 0u32 into r139;
    is.eq r139 0u32 into r140;
    assert.eq r140 true;

function check_fallback:
    async check_fallback into r0;
    output r0 as test.aleo/check_fallback.future;

finalize check_fallback:
    contains child.aleo/flag__[false] into r0;
    get.or_use child.aleo/flag__[false] false into r1;
    cast true r1 into r2 as Optional__DbbQYuLaHdi;
    cast false false into r3 as Optional__DbbQYuLaHdi;
    ternary r0 r2.is_some r3.is_some into r4;
    ternary r0 r2.val r3.val into r5;
    cast r4 r5 into r6 as Optional__DbbQYuLaHdi;
    contains child.aleo/flag__[false] into r7;
    get.or_use child.aleo/flag__[false] false into r8;
    cast true r8 into r9 as Optional__DbbQYuLaHdi;
    cast false false into r10 as Optional__DbbQYuLaHdi;
    ternary r7 r9.is_some r10.is_some into r11;
    ternary r7 r9.val r10.val into r12;
    cast r11 r12 into r13 as Optional__DbbQYuLaHdi;
    ternary r6.is_some r13.val false into r14;
    is.eq r14 false into r15;
    assert.eq r15 true;
    contains child.aleo/scalar_val__[false] into r16;
    get.or_use child.aleo/scalar_val__[false] 0scalar into r17;
    cast true r17 into r18 as Optional__JYP65FYVVJA;
    cast false 0scalar into r19 as Optional__JYP65FYVVJA;
    ternary r16 r18.is_some r19.is_some into r20;
    ternary r16 r18.val r19.val into r21;
    cast r20 r21 into r22 as Optional__JYP65FYVVJA;
    contains child.aleo/scalar_val__[false] into r23;
    get.or_use child.aleo/scalar_val__[false] 0scalar into r24;
    cast true r24 into r25 as Optional__JYP65FYVVJA;
    cast false 0scalar into r26 as Optional__JYP65FYVVJA;
    ternary r23 r25.is_some r26.is_some into r27;
    ternary r23 r25.val r26.val into r28;
    cast r27 r28 into r29 as Optional__JYP65FYVVJA;
    ternary r22.is_some r29.val 0scalar into r30;
    is.eq r30 0scalar into r31;
    assert.eq r31 true;
    contains child.aleo/field_val__[false] into r32;
    get.or_use child.aleo/field_val__[false] 0field into r33;
    cast true r33 into r34 as Optional__K4XRQPOk9yX;
    cast false 0field into r35 as Optional__K4XRQPOk9yX;
    ternary r32 r34.is_some r35.is_some into r36;
    ternary r32 r34.val r35.val into r37;
    cast r36 r37 into r38 as Optional__K4XRQPOk9yX;
    contains child.aleo/field_val__[false] into r39;
    get.or_use child.aleo/field_val__[false] 0field into r40;
    cast true r40 into r41 as Optional__K4XRQPOk9yX;
    cast false 0field into r42 as Optional__K4XRQPOk9yX;
    ternary r39 r41.is_some r42.is_some into r43;
    ternary r39 r41.val r42.val into r44;
    cast r43 r44 into r45 as Optional__K4XRQPOk9yX;
    ternary r38.is_some r45.val 0field into r46;
    is.eq r46 0field into r47;
    assert.eq r47 true;
    contains child.aleo/group_val__[false] into r48;
    get.or_use child.aleo/group_val__[false] 0group into r49;
    cast true r49 into r50 as Optional__8aTicnNTOvk;
    cast false 0group into r51 as Optional__8aTicnNTOvk;
    ternary r48 r50.is_some r51.is_some into r52;
    ternary r48 r50.val r51.val into r53;
    cast r52 r53 into r54 as Optional__8aTicnNTOvk;
    contains child.aleo/group_val__[false] into r55;
    get.or_use child.aleo/group_val__[false] 0group into r56;
    cast true r56 into r57 as Optional__8aTicnNTOvk;
    cast false 0group into r58 as Optional__8aTicnNTOvk;
    ternary r55 r57.is_some r58.is_some into r59;
    ternary r55 r57.val r58.val into r60;
    cast r59 r60 into r61 as Optional__8aTicnNTOvk;
    ternary r54.is_some r61.val 0group into r62;
    is.eq r62 0group into r63;
    assert.eq r63 true;
    contains child.aleo/point__[false] into r64;
    cast 0field 0field into r65 as child.aleo/Point;
    get.or_use child.aleo/point__[false] r65 into r66;
    cast true r66 into r67 as Optional__6Uxqmb23WYh;
    cast 0field 0field into r68 as child.aleo/Point;
    cast false r68 into r69 as Optional__6Uxqmb23WYh;
    ternary r64 r67.val.x r69.val.x into r70;
    ternary r64 r67.val.y r69.val.y into r71;
    cast r70 r71 into r72 as child.aleo/Point;
    ternary r64 r67.is_some r69.is_some into r73;
    cast r73 r72 into r74 as Optional__6Uxqmb23WYh;
    contains child.aleo/point__[false] into r75;
    cast 0field 0field into r76 as child.aleo/Point;
    get.or_use child.aleo/point__[false] r76 into r77;
    cast true r77 into r78 as Optional__6Uxqmb23WYh;
    cast 0field 0field into r79 as child.aleo/Point;
    cast false r79 into r80 as Optional__6Uxqmb23WYh;
    ternary r75 r78.val.x r80.val.x into r81;
    ternary r75 r78.val.y r80.val.y into r82;
    cast r81 r82 into r83 as child.aleo/Point;
    ternary r75 r78.is_some r80.is_some into r84;
    cast r84 r83 into r85 as Optional__6Uxqmb23WYh;
    cast 0field 0field into r86 as child.aleo/Point;
    ternary r74.is_some r85.val.x r86.x into r87;
    ternary r74.is_some r85.val.y r86.y into r88;
    cast r87 r88 into r89 as child.aleo/Point;
    is.eq r89.x 0field into r90;
    assert.eq r90 true;
    contains child.aleo/points__[false] into r91;
    cast 0field 0field into r92 as child.aleo/Point;
    cast r92 r92 into r93 as [child.aleo/Point; 2u32];
    get.or_use child.aleo/points__[false] r93 into r94;
    cast true r94 into r95 as Optional__BvQiU368h5e;
    cast 0field 0field into r96 as child.aleo/Point;
    cast r96 r96 into r97 as [child.aleo/Point; 2u32];
    cast false r97 into r98 as Optional__BvQiU368h5e;
    ternary r91 r95.val[0u32].x r98.val[0u32].x into r99;
    ternary r91 r95.val[0u32].y r98.val[0u32].y into r100;
    cast r99 r100 into r101 as child.aleo/Point;
    ternary r91 r95.val[1u32].x r98.val[1u32].x into r102;
    ternary r91 r95.val[1u32].y r98.val[1u32].y into r103;
    cast r102 r103 into r104 as child.aleo/Point;
    cast r101 r104 into r105 as [child.aleo/Point; 2u32];
    ternary r91 r95.is_some r98.is_some into r106;
    cast r106 r105 into r107 as Optional__BvQiU368h5e;
    contains child.aleo/points__[false] into r108;
    cast 0field 0field into r109 as child.aleo/Point;
    cast r109 r109 into r110 as [child.aleo/Point; 2u32];
    get.or_use child.aleo/points__[false] r110 into r111;
    cast true r111 into r112 as Optional__BvQiU368h5e;
    cast 0field 0field into r113 as child.aleo/Point;
    cast r113 r113 into r114 as [child.aleo/Point; 2u32];
    cast false r114 into r115 as Optional__BvQiU368h5e;
    ternary r108 r112.val[0u32].x r115.val[0u32].x into r116;
    ternary r108 r112.val[0u32].y r115.val[0u32].y into r117;
    cast r116 r117 into r118 as child.aleo/Point;
    ternary r108 r112.val[1u32].x r115.val[1u32].x into r119;
    ternary r108 r112.val[1u32].y r115.val[1u32].y into r120;
    cast r119 r120 into r121 as child.aleo/Point;
    cast r118 r121 into r122 as [child.aleo/Point; 2u32];
    ternary r108 r112.is_some r115.is_some into r123;
    cast r123 r122 into r124 as Optional__BvQiU368h5e;
    cast 0field 0field into r125 as child.aleo/Point;
    cast 0field 0field into r126 as child.aleo/Point;
    cast r125 r126 into r127 as [child.aleo/Point; 2u32];
    ternary r107.is_some r124.val[0u32].x r127[0u32].x into r128;
    ternary r107.is_some r124.val[0u32].y r127[0u32].y into r129;
    cast r128 r129 into r130 as child.aleo/Point;
    ternary r107.is_some r124.val[1u32].x r127[1u32].x into r131;
    ternary r107.is_some r124.val[1u32].y r127[1u32].y into r132;
    cast r131 r132 into r133 as child.aleo/Point;
    cast r130 r133 into r134 as [child.aleo/Point; 2u32];
    is.eq r134[0u32].x 0field into r135;
    assert.eq r135 true;
    contains child.aleo/stats__[false] into r136;
    cast 0u32 0u32 0u32 into r137 as [u32; 3u32];
    cast r137 false into r138 as child.aleo/Stats;
    get.or_use child.aleo/stats__[false] r138 into r139;
    cast true r139 into r140 as Optional__L4AaGzlaCt7;
    cast r137 false into r141 as child.aleo/Stats;
    cast false r141 into r142 as Optional__L4AaGzlaCt7;
    ternary r136 r140.val.values[0u32] r142.val.values[0u32] into r143;
    ternary r136 r140.val.values[1u32] r142.val.values[1u32] into r144;
    ternary r136 r140.val.values[2u32] r142.val.values[2u32] into r145;
    cast r143 r144 r145 into r146 as [u32; 3u32];
    ternary r136 r140.val.active r142.val.active into r147;
    cast r146 r147 into r148 as child.aleo/Stats;
    ternary r136 r140.is_some r142.is_some into r149;
    cast r149 r148 into r150 as Optional__L4AaGzlaCt7;
    contains child.aleo/stats__[false] into r151;
    cast r137 false into r152 as child.aleo/Stats;
    get.or_use child.aleo/stats__[false] r152 into r153;
    cast true r153 into r154 as Optional__L4AaGzlaCt7;
    cast r137 false into r155 as child.aleo/Stats;
    cast false r155 into r156 as Optional__L4AaGzlaCt7;
    ternary r151 r154.val.values[0u32] r156.val.values[0u32] into r157;
    ternary r151 r154.val.values[1u32] r156.val.values[1u32] into r158;
    ternary r151 r154.val.values[2u32] r156.val.values[2u32] into r159;
    cast r157 r158 r159 into r160 as [u32; 3u32];
    ternary r151 r154.val.active r156.val.active into r161;
    cast r160 r161 into r162 as child.aleo/Stats;
    ternary r151 r154.is_some r156.is_some into r163;
    cast r163 r162 into r164 as Optional__L4AaGzlaCt7;
    cast 0u32 0u32 0u32 into r165 as [u32; 3u32];
    cast r165 false into r166 as child.aleo/Stats;
    ternary r150.is_some r164.val.values[0u32] r166.values[0u32] into r167;
    ternary r150.is_some r164.val.values[1u32] r166.values[1u32] into r168;
    ternary r150.is_some r164.val.values[2u32] r166.values[2u32] into r169;
    cast r167 r168 r169 into r170 as [u32; 3u32];
    ternary r150.is_some r164.val.active r166.active into r171;
    cast r170 r171 into r172 as child.aleo/Stats;
    is.eq r172.active false into r173;
    assert.eq r173 true;
    contains child.aleo/arr_u32__[false] into r174;
    get.or_use child.aleo/arr_u32__[false] r137 into r175;
    cast true r175 into r176 as Optional__EJpsIdnRUro;
    cast false r137 into r177 as Optional__EJpsIdnRUro;
    ternary r174 r176.val[0u32] r177.val[0u32] into r178;
    ternary r174 r176.val[1u32] r177.val[1u32] into r179;
    ternary r174 r176.val[2u32] r177.val[2u32] into r180;
    cast r178 r179 r180 into r181 as [u32; 3u32];
    ternary r174 r176.is_some r177.is_some into r182;
    cast r182 r181 into r183 as Optional__EJpsIdnRUro;
    contains child.aleo/arr_u32__[false] into r184;
    get.or_use child.aleo/arr_u32__[false] r137 into r185;
    cast true r185 into r186 as Optional__EJpsIdnRUro;
    cast false r137 into r187 as Optional__EJpsIdnRUro;
    ternary r184 r186.val[0u32] r187.val[0u32] into r188;
    ternary r184 r186.val[1u32] r187.val[1u32] into r189;
    ternary r184 r186.val[2u32] r187.val[2u32] into r190;
    cast r188 r189 r190 into r191 as [u32; 3u32];
    ternary r184 r186.is_some r187.is_some into r192;
    cast r192 r191 into r193 as Optional__EJpsIdnRUro;
    ternary r183.is_some r193.val[0u32] 0u32 into r194;
    ternary r183.is_some r193.val[1u32] 0u32 into r195;
    ternary r183.is_some r193.val[2u32] 0u32 into r196;
    cast r194 r195 r196 into r197 as [u32; 3u32];
    is.eq r197[1u32] 0u32 into r198;
    assert.eq r198 true;
    contains child.aleo/arr_bool__[false] into r199;
    cast false false into r200 as [boolean; 2u32];
    get.or_use child.aleo/arr_bool__[false] r200 into r201;
    cast true r201 into r202 as Optional__H28y6OQZ8v9;
    cast false r200 into r203 as Optional__H28y6OQZ8v9;
    ternary r199 r202.val[0u32] r203.val[0u32] into r204;
    ternary r199 r202.val[1u32] r203.val[1u32] into r205;
    cast r204 r205 into r206 as [boolean; 2u32];
    ternary r199 r202.is_some r203.is_some into r207;
    cast r207 r206 into r208 as Optional__H28y6OQZ8v9;
    contains child.aleo/arr_bool__[false] into r209;
    get.or_use child.aleo/arr_bool__[false] r200 into r210;
    cast true r210 into r211 as Optional__H28y6OQZ8v9;
    cast false r200 into r212 as Optional__H28y6OQZ8v9;
    ternary r209 r211.val[0u32] r212.val[0u32] into r213;
    ternary r209 r211.val[1u32] r212.val[1u32] into r214;
    cast r213 r214 into r215 as [boolean; 2u32];
    ternary r209 r211.is_some r212.is_some into r216;
    cast r216 r215 into r217 as Optional__H28y6OQZ8v9;
    ternary r208.is_some r217.val[0u32] false into r218;
    ternary r208.is_some r217.val[1u32] false into r219;
    cast r218 r219 into r220 as [boolean; 2u32];
    is.eq r220[1u32] false into r221;
    assert.eq r221 true;
    contains child.aleo/nested__[false] into r222;
    cast 0u8 0u8 into r223 as [u8; 2u32];
    cast r223 r223 into r224 as [[u8; 2u32]; 2u32];
    get.or_use child.aleo/nested__[false] r224 into r225;
    cast true r225 into r226 as Optional__3Jw8FxjrqtE;
    cast false r224 into r227 as Optional__3Jw8FxjrqtE;
    ternary r222 r226.val[0u32][0u32] r227.val[0u32][0u32] into r228;
    ternary r222 r226.val[0u32][1u32] r227.val[0u32][1u32] into r229;
    cast r228 r229 into r230 as [u8; 2u32];
    ternary r222 r226.val[1u32][0u32] r227.val[1u32][0u32] into r231;
    ternary r222 r226.val[1u32][1u32] r227.val[1u32][1u32] into r232;
    cast r231 r232 into r233 as [u8; 2u32];
    cast r230 r233 into r234 as [[u8; 2u32]; 2u32];
    ternary r222 r226.is_some r227.is_some into r235;
    cast r235 r234 into r236 as Optional__3Jw8FxjrqtE;
    contains child.aleo/nested__[false] into r237;
    get.or_use child.aleo/nested__[false] r224 into r238;
    cast true r238 into r239 as Optional__3Jw8FxjrqtE;
    cast false r224 into r240 as Optional__3Jw8FxjrqtE;
    ternary r237 r239.val[0u32][0u32] r240.val[0u32][0u32] into r241;
    ternary r237 r239.val[0u32][1u32] r240.val[0u32][1u32] into r242;
    cast r241 r242 into r243 as [u8; 2u32];
    ternary r237 r239.val[1u32][0u32] r240.val[1u32][0u32] into r244;
    ternary r237 r239.val[1u32][1u32] r240.val[1u32][1u32] into r245;
    cast r244 r245 into r246 as [u8; 2u32];
    cast r243 r246 into r247 as [[u8; 2u32]; 2u32];
    ternary r237 r239.is_some r240.is_some into r248;
    cast r248 r247 into r249 as Optional__3Jw8FxjrqtE;
    ternary r236.is_some r249.val[0u32][0u32] 0u8 into r250;
    ternary r236.is_some r249.val[0u32][1u32] 0u8 into r251;
    cast r250 r251 into r252 as [u8; 2u32];
    ternary r236.is_some r249.val[1u32][0u32] 0u8 into r253;
    ternary r236.is_some r249.val[1u32][1u32] 0u8 into r254;
    cast r253 r254 into r255 as [u8; 2u32];
    cast r252 r255 into r256 as [[u8; 2u32]; 2u32];
    is.eq r256[0u32][0u32] 0u8 into r257;
    assert.eq r257 true;
    contains child.aleo/counter__[false] into r258;
    get.or_use child.aleo/counter__[false] 0u8 into r259;
    cast true r259 into r260 as Optional__8hhrPm4c3KB;
    cast false 0u8 into r261 as Optional__8hhrPm4c3KB;
    ternary r258 r260.is_some r261.is_some into r262;
    ternary r258 r260.val r261.val into r263;
    cast r262 r263 into r264 as Optional__8hhrPm4c3KB;
    contains child.aleo/counter__[false] into r265;
    get.or_use child.aleo/counter__[false] 0u8 into r266;
    cast true r266 into r267 as Optional__8hhrPm4c3KB;
    cast false 0u8 into r268 as Optional__8hhrPm4c3KB;
    ternary r265 r267.is_some r268.is_some into r269;
    ternary r265 r267.val r268.val into r270;
    cast r269 r270 into r271 as Optional__8hhrPm4c3KB;
    ternary r264.is_some r271.val 123u8 into r272;
    is.eq r272 123u8 into r273;
    assert.eq r273 true;

constructor:
    assert.eq edition 0u16;


---
Note: Treating dependencies as Aleo produces different results:

Error [ETYC0372005]: Unknown variable `child.aleo/flag`
    --> compiler-test:14:20
     |
  14 |             assert(child.aleo/flag.unwrap() == true);
     |                    ^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo/scalar_val`
    --> compiler-test:15:20
     |
  15 |             assert(child.aleo/scalar_val.unwrap() == 1);
     |                    ^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo/field_val`
    --> compiler-test:16:20
     |
  16 |             assert(child.aleo/field_val.unwrap() == 42field);
     |                    ^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo/group_val`
    --> compiler-test:17:20
     |
  17 |             assert(child.aleo/group_val.unwrap() == 0group);
     |                    ^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo/point`
    --> compiler-test:20:21
     |
  20 |             let p = child.aleo/point.unwrap();
     |                     ^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo/points`
    --> compiler-test:25:22
     |
  25 |             let ps = child.aleo/points.unwrap();
     |                      ^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo/stats`
    --> compiler-test:30:21
     |
  30 |             let s = child.aleo/stats.unwrap();
     |                     ^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo/arr_u32`
    --> compiler-test:35:21
     |
  35 |             let a = child.aleo/arr_u32.unwrap();
     |                     ^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo/arr_bool`
    --> compiler-test:38:21
     |
  38 |             let b = child.aleo/arr_bool.unwrap();
     |                     ^^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo/nested`
    --> compiler-test:41:21
     |
  41 |             let n = child.aleo/nested.unwrap();
     |                     ^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo/counter`
    --> compiler-test:45:20
     |
  45 |             assert(child.aleo/counter.unwrap() == 9u8);
     |                    ^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo/vec`
    --> compiler-test:47:22
     |
  47 |             let v2 = child.aleo/vec.get(2);
     |                      ^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo/flag`
    --> compiler-test:60:20
     |
  60 |             assert(child.aleo/flag == none);
     |                    ^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo/scalar_val`
    --> compiler-test:61:20
     |
  61 |             assert(child.aleo/scalar_val == none);
     |                    ^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo/field_val`
    --> compiler-test:62:20
     |
  62 |             assert(child.aleo/field_val == none);
     |                    ^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo/group_val`
    --> compiler-test:63:20
     |
  63 |             assert(child.aleo/group_val == none);
     |                    ^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo/point`
    --> compiler-test:65:20
     |
  65 |             assert(child.aleo/point == none);
     |                    ^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo/points`
    --> compiler-test:66:20
     |
  66 |             assert(child.aleo/points == none);
     |                    ^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo/stats`
    --> compiler-test:67:20
     |
  67 |             assert(child.aleo/stats == none);
     |                    ^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo/arr_u32`
    --> compiler-test:69:20
     |
  69 |             assert(child.aleo/arr_u32 == none);
     |                    ^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo/arr_bool`
    --> compiler-test:70:20
     |
  70 |             assert(child.aleo/arr_bool == none);
     |                    ^^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo/nested`
    --> compiler-test:71:20
     |
  71 |             assert(child.aleo/nested == none);
     |                    ^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo/counter`
    --> compiler-test:73:20
     |
  73 |             assert(child.aleo/counter == none);
     |                    ^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo/vec`
    --> compiler-test:74:20
     |
  74 |             assert(child.aleo/vec.len() == 0);
     |                    ^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo/flag`
    --> compiler-test:86:20
     |
  86 |             assert(child.aleo/flag.unwrap_or(false) == false);
     |                    ^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo/scalar_val`
    --> compiler-test:87:20
     |
  87 |             assert(child.aleo/scalar_val.unwrap_or(0) == 0);
     |                    ^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo/field_val`
    --> compiler-test:88:20
     |
  88 |             assert(child.aleo/field_val.unwrap_or(0field) == 0field);
     |                    ^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo/group_val`
    --> compiler-test:89:20
     |
  89 |             assert(child.aleo/group_val.unwrap_or(0group) == 0group);
     |                    ^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo/point`
    --> compiler-test:91:21
     |
  91 |             let p = child.aleo/point.unwrap_or(
     |                     ^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo/points`
    --> compiler-test:96:22
     |
  96 |             let ps = child.aleo/points.unwrap_or([
     |                      ^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo/stats`
    --> compiler-test:102:21
     |
 102 |             let s = child.aleo/stats.unwrap_or(
     |                     ^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo/arr_u32`
    --> compiler-test:107:21
     |
 107 |             let a = child.aleo/arr_u32.unwrap_or([0u32, 0u32, 0u32]);
     |                     ^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo/arr_bool`
    --> compiler-test:110:21
     |
 110 |             let b = child.aleo/arr_bool.unwrap_or([false, false]);
     |                     ^^^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo/nested`
    --> compiler-test:113:21
     |
 113 |             let n = child.aleo/nested.unwrap_or([[0u8, 0u8], [0u8, 0u8]]);
     |                     ^^^^^^^^^^^^^^^^^
Error [ETYC0372005]: Unknown variable `child.aleo/counter`
    --> compiler-test:116:20
     |
 116 |             assert(child.aleo/counter.unwrap_or(123u8) == 123u8);
     |                    ^^^^^^^^^^^^^^^^^^
